--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-autocomplete",
+  "name": "object-autocomplete",
   "version": "0.0.1",
   "homepage": "https://github.com/junajan/angular-livesearch",
   "authors": [
